@@ -1,3 +1,12 @@
+2016-05-25  Zalan Bujtas  <zalan@apple.com>
+
+        Addressing post-review comments on r200971.
+
+        Reviewed by Darin Adler.
+
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::hitTestResultAtPoint):
+
 2016-05-24  Zalan Bujtas  <zalan@apple.com>
 
         fast/table/neighboring-cells-when-collapsed-border-changes.html is flaky.
